# osgPT

COMHelper/: PolyTransCOMSinkEvents.h  PolyTransComHelper.h  PolyTransImporter.h  PolyTransOutputConsole.h  shared_okino_com_src.h  shared_okino_com_src_resources.h  shared_okino_com_src_resources.rc
OSGExport/: ANIM.CPP  ATMOSPH.CPP  BACKGRND.CPP  BICUBIC.CPP  CAMERA.CPP  CMakeLists.txt  EXP_ISU_OSG.HLP  EXP_ISU_OSG.RC  EXP_ISU_OSG.RTI  IP_LINES.CPP  Ip_mesh.cpp  LIGHTS.CPP  MAIN.CPP  MAIN.H  NTDLL.CPP  NURBCURV.CPP  NURBSURF.CPP  OPTIONS.CPP  OSGExport.dsp  OSGExport.dsw  OSGExport.sln  OSGExport.vcproj  README.txt  RESOURCE.H  SKINNING.CPP  SPLINESH.CPP  SURFACE.CPP  TEXTURE.CPP  TXTRPROJ.CPP  exp_isu_osg.res  exporter.def  ip_points.cpp  metadata.cpp  osg.cpp  osg.h  osgInstance.cpp  osgInstance.h  osgMesh.cpp  osgMetaData.cpp  osgMetaData.h  (+8 more)
OSGExport/docs/: Contents.cnt  HELP.HLP  HELP.hpj  HELP.prj.hpj  HELP.rtf  documentation.doc
OSGExport/msvc9/: OSGExport.sln  OSGExport.vcproj
VS7/: PolyTransDev.sln  osgPT.sln
VS7/Test/ptViewer/: ptViewer.vcproj
VS7/src/osgOQ/: osgOQ.vcproj
VS7/src/osgdb_PolyTrans/: osgdb_PolyTrans.vcproj
VS7/src/osgdb_osgOQ/: osgdb_osgOQ.vcproj
data/: osgOQConfigFile.txt  ptconfigfile.txt
osgdb_PolyTrans/: CMakeLists.txt  build.bat
osgdb_PolyTrans/VS7/: osgPT.sln
osgdb_PolyTrans/VS7/src/osgdb_PolyTrans/: osgdb_PolyTrans.vcproj
osgdb_PolyTrans/data/: ptconfigfile.txt
osgdb_PolyTrans/src/COMHelper/: PolyTransComHelper.cpp  PolyTransComHelper.h  PolyTransImporter.cpp  PolyTransOutput.cpp  PolyTransOutputConsole.cpp  shared_okino_com_src.h  shared_okino_com_src_batch.cpp  shared_okino_com_src_main.cpp  shared_okino_com_src_resources.h  shared_okino_com_src_resources.rc
osgdb_PolyTrans/src/osgdb_PolyTrans/: CMakeLists.txt  OptionLoader.cpp  OptionLoader.h  osgdb_PolyTrans.cpp
src/COMHelper/: PolyTransComHelper.cpp  PolyTransComHelper.h  PolyTransImporter.h  PolyTransOutput.h  shared_okino_com_src_batch.cpp  shared_okino_com_src_main.cpp
src/COMHelper/COMHelper/: PolyTransCOMSinkEvents.cpp  PolyTransComHelper.cpp  PolyTransImporter.cpp
src/osgdb_PolyTrans/: CMakeLists.txt  ConfigFileReader.cpp  ConfigFileReader.h  OptionLoader.cpp  OptionLoader.h  osgdb_PolyTrans.cpp
